parser/tests/bad/ref01-3.st
% identifier 'x' is not declared
%   subprogram call

var i := func()
